# prueba1-gha

./: .gitignore  CHANGELOG.md  RELEASE.md  main.py  pyproject.toml  setup.py
.github/workflows/: invite-contributors.yml  pre-release-pr.yml
docs/concepts/: async.md
docs/errors/: invalid-union-type.md
docs/general/: queries.md
prueba1_gha/: main.py
tests/: test_main.py  test_operations.py
